# autokatze

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  log_channels.json.example
.github/workflows/: build.yml
src/: main.rs
src/modules/: antispam.rs  honeypot.rs  mod.rs
src/utils/: mod.rs
