[package]
name = "autokatze"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
hex = "0.4.3"
poise = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
